--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "jest --runInBand"
   },
+  "type": "module",
   "devDependencies": {
     "jest": "^26.6.3",
     "supertest": "^6.1.6"
@@ -16,5 +17,8 @@
     "type": "git",
     "url": "https://github.com/DigitalCareerInstitute/BE-Express-Almost-Simple-Server",
     "id": 413821899
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
